2007-09-11  Goedson Teixeira Paixao  <goedson@debian.org>

	* doc/C/gnotime.xml: Update the manual up to the Customization
	section.

2007-09-08  Goedson Teixeira Paixao  <goedson@debian.org>

	* po/*.po*: Update message template files with some missing
	strings.

	* po/pt_BR.po: Fixed some Brazilian Portuguese translations.

2007-09-06  Goedson Teixeira Paixao  <goedson@debian.org>

	* po/pt_BR.po: Update Brazilian Portuguese translation.
	
	* po/*.po: Updated with new messages.

	* glade/plugin_editor.glade: Fixed some typos.

	* po/gnotime-2.0.pot: Update template file.

	* po/Makefile.in.in: Added.


2007-09-05  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/ghtml.c (task_get_latest_str_scm)
	(task_get_earliest_str_scm): Display "No activity" instead of
	"01/01/1970" when the task has no time intervals recorded.

	* configure.in: Updated version number to 2.2.3

2007-09-01  Goedson Teixeira Paixao  <goedson@debian.org>

	* src/journal.c (on_save_clicked_cb): Use GtkFileChooserDialog for
	the file selection. This simplifies the code and also fixes the
	problem of a hidden question dialog when overwriting file, as
	reported in the Debian Bug Tracking System at
	http://bugs.debian.org/422023 .
	(task_paste_clicked_cb): Don't use gtt_task_copy when pasting the
	task, since it doesn't copy the time intervals list. Fixes bug
	#1522802.

	* src/menus.c (menu_main_edit): Fixed Paste project menu entry. It
	was associated with the cut_project function.

2007-08-31  Goedson Teixeira Paixao  <goedson@debian.org>

	* Applied patch by Quentin Harley for currency symbol
	  configuration with some changes to allow for locale based
	  formating of currency values. Details about the changed files
	  bellow.
	
	* glade/prefs.glade: Added GUI elements for the currency formating
	options.

	* ghtml/C/gtt.scm (gtt-task-billable-value-str): Removed hard
	coded formating of zero values. It's now done inside ghtml.c.
